--- a/incidencias.html
+++ b/incidencias.html
@@ -116,14 +116,33 @@
             flex-shrink: 0; /* Evita que el SVG se comprima */
         }
         #peru-svg path {
-            fill: #FFEDA0; /* Color por defecto */
+            fill: #deebf7; /* Color por defecto */
             stroke: #ffffff;
-            stroke-width: 0.5;
+            stroke-width: 2.0; /* Contorno global más grueso */
             cursor: pointer;
             transition: fill 0.3s;
         }
+        #peru-svg path.callao-path { /* Estilo específico para Callao */
+            stroke: #000000; /* Negro para resaltar */
+            stroke-width: 3.0; /* Más grueso que el resto */
+        }
         #peru-svg path:hover {
-            fill: #BD0026 !important; /* Resaltado al hover */
+            fill: #2c5aa0 !important; /* Resaltado al hover */
+        }
+        #tooltip {
+            position: absolute;
+            opacity: 0;
+            pointer-events: none;
+            background: white;
+            border: 2px solid #2c5aa0;
+            border-radius: 8px;
+            padding: 12px;
+            font-size: 18px; /* Letras más grandes */
+            font-weight: bold;
+            color: #2c5aa0;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            z-index: 1000;
+            white-space: nowrap;
         }
     </style>
     <!-- Chart.js para gráficos -->
@@ -132,7 +151,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <h1>Dashboard de Incidencias (desde Google Sheet)</h1>
+    <h1>Dashboard de Incidencias</h1>
     
     <!-- Sección de Métricas Resumidas -->
     <div class="dashboard" id="metrics-dashboard" style="display: none;">
@@ -182,8 +201,11 @@
     <div class="map-container" id="map-container" style="display: none;">
         <h3>Mapa de Incidencias por Departamento en Perú (ODPE)</h3>
         <svg id="peru-svg"></svg>
-        <p style="color: #666; font-style: italic;">Pasa el cursor sobre un departamento para ver la cantidad de incidencias en las ODPE. Colores más intensos indican más incidencias.</p>
+        <p style="color: #666; font-style: italic;">Pasa el cursor sobre un departamento para ver la cantidad de incidencias . Colores más intensos indican más incidencias.</p>
     </div>
+
+    <!-- Tooltip personalizado -->
+    <div id="tooltip"></div>
 
     <!-- Tablas Originales (opcionales, colapsables) -->
     <details>
@@ -486,12 +508,15 @@
         async function initSVGMap() {
             const svg = d3.select("#peru-svg");
             const width = 800;
-            const height = 900; // Altura fija
+            const height = 1000; // Altura fija
             svg.attr("width", width).attr("height", height);
 
             // Proyección centrada: ajustada para centrar el mapa vertical y horizontalmente
-            const projection = d3.geoMercator().scale(2200).translate([width / 2, height / 2]).center([-75, -9]); // Centrado perfecto en height/2
+            const projection = d3.geoMercator().scale(3000).translate([width / 2, height / 2]).center([-75, -9.5]); // Centrado perfecto en height/2
             const path = d3.geoPath().projection(projection);
+
+            // Tooltip div
+            const tooltip = d3.select("#tooltip");
 
             try {
                 const geoData = await d3.json(geoJsonUrl);
@@ -500,36 +525,41 @@
                     .enter()
                     .append("path")
                     .attr("d", path)
-                    .attr("class", "department")
+                    .attr("class", d => d.properties.NOMBDEP === 'CALLAO' ? "department callao-path" : "department") /* Clase especial para Callao */
                     .style("fill", d => {
                         const name = d.properties.NOMBDEP; // NOMBDEP en mayúsculas
                         const count = deptCounts[name] || 0;
-                        return count > 10 ? '#800026' :
-                               count > 5  ? '#BD0026' :
-                               count > 1  ? '#E31A1C' :
-                               count > 0  ? '#FC4E2A' :
-                                            '#FFEDA0';
+                        return count > 10 ? '#08519c' :
+                               count > 5  ? '#3182bd' :
+                               count > 1  ? '#6baed6' :
+                               count > 0  ? '#9ecae1' :
+                                            '#deebf7';
                     })
                     .on("mouseover", function(event, d) {
-                        d3.select(this).style("fill", "#BD0026");
-                        // Tooltip simple con title
-                        const title = this.querySelector("title") || document.createElementNS("http://www.w3.org/2000/svg", "title");
+                        d3.select(this).style("fill", "#2c5aa0");
+                        // Tooltip personalizado
                         const name = d.properties.NOMBDEP;
-                        title.textContent = `${name}: ${deptCounts[name] || 0} incidencias`;
-                        this.appendChild(title);
+                        const count = deptCounts[name] || 0;
+                        tooltip.html(`${name}: ${count} incidencias`)
+                               .style("left", (event.pageX + 10) + "px")
+                               .style("top", (event.pageY - 10) + "px")
+                               .transition()
+                               .duration(200)
+                               .style("opacity", 1);
                     })
                     .on("mouseout", function(event, d) {
                         d3.select(this).style("fill", () => {
                             const name = d.properties.NOMBDEP;
                             const count = deptCounts[name] || 0;
-                            return count > 10 ? '#800026' :
-                                   count > 5  ? '#BD0026' :
-                                   count > 1  ? '#E31A1C' :
-                                   count > 0  ? '#FC4E2A' :
-                                                '#FFEDA0';
+                            return count > 10 ? '#08519c' :
+                                   count > 5  ? '#3182bd' :
+                                   count > 1  ? '#6baed6' :
+                                   count > 0  ? '#9ecae1' :
+                                                '#deebf7';
                         });
-                        const title = this.querySelector("title");
-                        if (title) title.remove();
+                        tooltip.transition()
+                               .duration(500)
+                               .style("opacity", 0);
                     });
 
                 // Ajustar vista para centrar el contenido
