--- a/especialistas.html
+++ b/especialistas.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla de Datos de Personas</title>
     <style>
+        /* === FUENTE Y COLORES GLOBALES === */
+        body {
+            font-family: 'Open Sans', Arial, sans-serif;
+            background-color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Títulos principales: color personalizado y fuente Open Sans */
+        .header, .table-container, .btn h2, .card p[style*="bold"], .card2 p[style*="bold"] {
+            font-family: 'Open Sans', sans-serif !important;
+            font-weight: 700;
+            color: #1a4971 !important; /* Cambia este color por el que quieras */
+        }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0e7d8;
+            background-color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,7 +32,7 @@
             margin: 0;
         }
         .container {
-            background-color: #4a9a8f;
+            background-color: #91abe4;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -29,9 +46,17 @@
             font-size: 24px;
             margin-bottom: 20px;
             font-weight: bold;
+            /* AZUL + CONTORNO BLANCO */
+            color: #00214f !important;                    /* Azul */
+            -webkit-text-stroke: 0.1px white;               /* Contorno blanco */
+            text-shadow: 
+            -1.5px -1.5px 0 white,
+            1.5px -1.5px 0 white,
+            -1.5px  1.5px 0 white,
+            1.5px  1.5px 0 white;
         }
         .table-container {
-            background-color: #f5e8c7;
+            background-color: #fdfeff;
             border-radius: 10px;
             padding: 15px;
             overflow-x: auto; /* Para desplazamiento horizontal si es necesario */
@@ -49,13 +74,13 @@
             font-size: 12px; /* Tamaño reducido para tabla ancha */
         }
         th {
-            background-color: #333;
+            background-color: #00214f;
             color: #fff;
             font-weight: bold;
             white-space: nowrap;
         }
         tr:hover {
-            background-color: #e0d3b2;
+            background-color: #d7f3fada; /* Slight color change on hover */
             transition: background-color 0.3s;
         }
         .btn {
@@ -119,7 +144,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">TABLA DE DATOS DE ESPECIALISTAS DE SOPORTE</div>
+                    <a href="index.html" class="back-btn">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="15 18 9 12 15 6"></polyline>
+                </svg>
+            </a>
+        <div class="header">      ESPECIALISTAS DE SOPORTE</div>
         <div class="table-container">
             <table>
                 <thead>
