--- a/imagenes.html
+++ b/imagenes.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0e7d8;
+            background-color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
