--- a/videos.html
+++ b/videos.html
@@ -162,7 +162,7 @@
                     <polyline points="15 18 9 12 15 6"></polyline>
                 </svg>
             </a>
-            <div class="header">GUÍAS AUDIOVISUALES</div>
+            <div class="header">VIDEOS</div>
         </div>
         <div class="grid">
             <button class="card">
@@ -210,4 +210,5 @@
         </div>
     </div>
 </body>
+
 </html>
