--- a/docs.html
+++ b/docs.html
@@ -166,7 +166,7 @@
                     <polyline points="15 18 9 12 15 6"></polyline>
                 </svg>
             </a>
-        <div class="header">DOCUMENTACIÓN TECNICA</div>
+        <div class="header">GUÍAS</div>
         <div class="grid">
             <button class="card">
                 
@@ -198,4 +198,5 @@
         </div>
     </div>
 </body>
+
 </html>
