--- a/especialistas.html
+++ b/especialistas.html
@@ -173,7 +173,7 @@
                         <td>8897</td>
                         <td>998426378</td>
                         <td>LIMA CENTRO- JESUS MARIA<br>TRUJILLO<br>CHICLAYO<br>IQUITOS</td>
-                        <td>g.sgsi.soporte@outlook.com</td>
+                        
                     </tr>
                     <tr>
                         <td>2</td>
@@ -183,7 +183,7 @@
                         <td>8892</td>
                         <td>991130351</td>
                         <td>CHACHAPOYAS<br>PIURA<br>HUAURA<br>CUSCO<br>HUANCAYO<br>ICA</td>
-                        <td></td>
+                        <td>g.sgsi.soporte@outlook.com</td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -193,13 +193,14 @@
                         <td>8829</td>
                         <td>990270972</td>
                         <td>ABANCAY<br>AREQUIPA<br>HUANUCO<br>PUCALLPA-CALLERIA</td>
-                        <td></td>
+                        
                     </tr>
                 </tbody>
             </table>
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRky74QFmWUUf_DcaReBS4UdFb5LE7w748CfK-M_FF77XYbbPlxazxG5nCfHmH73w/pub?gid=189967254&amp;single=true&amp;output=csv" target="_blank" class="btn">Ver CSV Original</a>
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRky74QFmWUUf_DcaReBS4UdFb5LE7w748CfK-M_FF77XYbbPlxazxG5nCfHmH73w/pub?gid=189967254&amp;single=true&amp;output=csv" target="_blank" class="btn">DESCARGAR</a>
         </div>
     </div>
 </body>
 
 </html>
+
