--- a/especialistas.html
+++ b/especialistas.html
@@ -173,7 +173,7 @@
                         <td>8897</td>
                         <td>998426378</td>
                         <td>LIMA CENTRO- JESUS MARIA<br>TRUJILLO<br>CHICLAYO<br>IQUITOS</td>
-                        
+                        <td> </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -183,7 +183,7 @@
                         <td>8892</td>
                         <td>991130351</td>
                         <td>CHACHAPOYAS<br>PIURA<br>HUAURA<br>CUSCO<br>HUANCAYO<br>ICA</td>
-                        <td>g.sgsi.soporte@outlook.com</td>
+                        g.sgsi.soporte@outlook.com
                     </tr>
                     <tr>
                         <td>3</td>
@@ -193,7 +193,7 @@
                         <td>8829</td>
                         <td>990270972</td>
                         <td>ABANCAY<br>AREQUIPA<br>HUANUCO<br>PUCALLPA-CALLERIA</td>
-                        
+                        <td> </td>
                     </tr>
                 </tbody>
             </table>
@@ -203,4 +203,5 @@
 </body>
 
 </html>
+
 
