--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <header>
-        <h1>GUIAS Y VIDEOS</h1>
+        <h1>SISTEMAS DE INTEGRACIÓN DE PROCESOS ELECTORALES DE LA SUBGERENCIA DE SISTEMAS DE INFORMACIÓN DE LA GITE</h1>
         <p class="subtitle">Sistema de Gestión de Incidencias y Soporte</p>
     </header>
 
@@ -191,4 +191,5 @@
         });
     </script>
 </body>
+
 </html>
