--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button {
                 <h2>SISTEMA DE GESTION ADMINISTRATIVA</h2>
                 <div style="display: flex; justify-content: center; margin-left: 10px;">
                 <img src="SIGEA.png" alt="Video Icon" style="width: 150px; height: 150px; margin-bottom: 5px; margin-left: 60px;">
-                <h3 style="color: #00214f;"> PLANIFICA, EJECUTA Y SUPERVISA LOS PROCESOS ELECTORALES DE MANERA EFICIENTE Y TRANSPARENTE</h3>
+                <h3 style="color: #00214f;"> Es una plataforma web interna accesible desde la ONPE, diseñada para la gestión integrada de tareas electorales y administrativas.</h3>
                 </div>
                 <p style="font-weight: bold; margin-right: 350px; margin-top: -20px;" >SIGEA</p>
             </button>
@@ -207,4 +207,5 @@ button {
         </div>
     </div>
 </body>
+
 </html>
