--- a/sistemas.html
+++ b/sistemas.html
@@ -112,7 +112,7 @@
     </h2>
 
     <div class="filter">
-      <label for="election-type">Tipo de elección</label>
+      <label for="election-type">Tipo de Proceso</label>
       <select id="election-type">
         <option value="generales">ELECCIONES GENERALES 2026</option>
         <option value="primarias">ELECCIONES PRIMARIAS 2026</option>
@@ -258,7 +258,7 @@
         </div>
       </a>
 
-      
+
       <!-- 
       <a href="sistemas/sistemades/index.html#sigma" class="module-link">
         <div class="module" data-type="primarias">
