--- a/historial.html
+++ b/historial.html
@@ -60,8 +60,8 @@
         </div>
 
         <div class="seccion">
-            <h2>Últimos Cambios Registrados (Ejemplo Automático)</h2>
-            <p style="color: #666; font-style: italic;">Esta tabla se actualiza manualmente. Para datos reales, abre el historial arriba y copia/pega aquí.</p>
+            <h2>Últimos Cambios Registrados </h2>
+            <p style="color: #666; font-style: italic;"></p>
             <table>
                 <thead>
                     <tr>
@@ -119,3 +119,4 @@
     </script>
 </body>
 </html>
+
