--- a/sistemas/sistemades/index.html
+++ b/sistemas/sistemades/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="topbar-right">
       <span class="user"></span>
-      <a href="#" class="logout">Cerrar Sesión</a>
+      <a href="/login.html" class="logout">Cerrar Sesión</a>
     </div>
   </header>
 
@@ -39,4 +39,5 @@
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
